5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1679_1105.log
== TEST (2019-04-25 17:38:25) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=(input("nome:"))

if (brasao != lobo and brasao != leao and brasao != veado and brasao != dragao and brasao != rosa and brasao != sol and brasao != esfolado and brasao != turta ):
	print("Entrada:",x)
	print("Animal:","invalido")
elif (brasao == lobo):
	print("Entrada:",x)
	print("Casa:","Tyrell")
elif (x == 5):
	print("Entrada:",x)
	print("Animal:","Garca")
elif (x == 10):
	print("Entrada:",x)
	print("Animal:","Arara")
elif (x == 20):
	print("Entrada:",x)
	print("Animal:","Mico-leao-dourado")
elif (x == 50):
	print("Entrada:",x)
	print("Animal:","Onca-pintada")
elif (x == 100):
	print("Entrada:",x)
	print("Animal:","Garoupa")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (brasao != lobo and brasao != leao and brasao != veado and brasao != dragao and brasao != rosa and brasao != sol and brasao != esfolado and brasao != turta ):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:38:53) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=(input("nome:"))

if (brasao != lobo and brasao != leao and brasao != veado and brasao != dragao and brasao != rosa and brasao != sol and brasao != esfolado and brasao != turta ):
	print("Entrada:",x)
	print("Animal:","invalido")
elif (brasao == lobo):
	print("Entrada:",x)
	print("Casa:","Stark")
elif (x == 5):
	print("Entrada:",x)
	print("Animal:","Garca")
elif (x == 10):
	print("Entrada:",x)
	print("Animal:","Arara")
elif (x == 20):
	print("Entrada:",x)
	print("Animal:","Mico-leao-dourado")
elif (x == 50):
	print("Entrada:",x)
	print("Animal:","Onca-pintada")
elif (x == 100):
	print("Entrada:",x)
	print("Animal:","Garoupa")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (brasao != lobo and brasao != leao and brasao != veado and brasao != dragao and brasao != rosa and brasao != sol and brasao != esfolado and brasao != turta ):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:39:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=(input("nome:"))

if (brasao != lobo and brasao != leao and brasao != veado and brasao != dragao and brasao != rosa and brasao != sol and brasao != esfolado and brasao != turta ):
	print("Entrada:",x)
	print("Animal:","invalido")
elif (brasao == lobo):
	print("Entrada:",brasao)
	print("Casa:","Stark")
elif (x == 5):
	print("Entrada:",x)
	print("A)
elif (x == 10):
	print("Entrada:",x)
	print("Animal:","Arara")
elif (x == 20):
	print("Entrada:",x)
	print("Animal:","Mico-leao-dourado")
elif (x == 50):
	print("Entrada:",x)
	print("Animal:","Onca-pintada")
elif (x == 100):
	print("Entrada:",x)
	print("Animal:","Garoupa")

-- ERROR:
File "XXXX", line 13
    print("A)
            ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:39:49) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=(input("nome:"))

if (brasao != lobo and brasao != leao and brasao != veado and brasao != dragao and brasao != rosa and brasao != sol and brasao != esfolado and brasao != turta ):
	print("Entrada:",x)
	print("Animal:","invalido")
elif (brasao == lobo):
	print("Entrada:",brasao)
	print("Casa:","Stark")
elif (x == 5):
	print("Entrada:",x)
	print("A)
elif (x == 10):
	print("Entrada:",x)
	print("Animal:","Arara")
elif (x == 20):
	print("Entrada:",x)
	print("Animal:","Mico-leao-dourado")
elif (x == 50):
	print("Entrada:",x)
	print("Animal:","Onca-pintada")
elif (x == 100):
	print("Entrada:",x)
	print("Animal:","Garoupa")

-- ERROR:
File "XXXX", line 13
    print("A)
            ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:39:54) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=(input("nome:"))

if (brasao != lobo and brasao != leao and brasao != veado and brasao != dragao and brasao != rosa and brasao != sol and brasao != esfolado and brasao != turta ):
	print("Entrada:",x)
	print("Animal:","invalido")
elif (brasao == lobo):
	print("Entrada:",brasao)
	print("Casa:","Stark")
elif (x == 5):
	print("Entrada:",x)
	print("A)
elif (x == 10):
	print("Entrada:",x)
	print("Animal:","Arara")
elif (x == 20):
	print("Entrada:",x)
	print("Animal:","Mico-leao-dourado")
elif (x == 50):
	print("Entrada:",x)
	print("Animal:","Onca-pintada")
elif (x == 100):
	print("Entrada:",x)
	print("Animal:","Garoupa")

-- ERROR:
File "XXXX", line 13
    print("A)
            ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:40:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=(input("nome:"))

if (brasao != lobo and brasao != leao and brasao != veado and brasao != dragao and brasao != rosa and brasao != sol and brasao != esfolado and brasao != turta ):
	print("Entrada:",x)
	print("Animal:","invalido")
elif (brasao == lobo):
	print("Entrada:",brasao)
	print("Casa:","Stark")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (brasao != lobo and brasao != leao and brasao != veado and brasao != dragao and brasao != rosa and brasao != sol and brasao != esfolado and brasao != turta ):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:41:37) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=(input("nome:"))

if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta ):
	print("Entrada:",x)
	print("Animal:","invalido")
elif (brasao == lobo):
	print("Entrada:",brasao)
	print("Casa:","Stark")

-- ERROR:
File "XXXX", line 5
    if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta ):
                                                                                                                                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:41:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=(input("nome:"))

if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta ):
	print("Entrada:",brasao)
	print("Animal:","invalido")
elif (brasao == lobo):
	print("Entrada:",brasao)
	print("Casa:","Stark")

-- ERROR:
File "XXXX", line 5
    if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta ):
                                                                                                                                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:42:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=(input("nome:"))

if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta ):
	print("Entrada:",brasao)
	print("Casa:"invalido")
elif (brasao == lobo):
	print("Entrada:",brasao)
	print("Casa:","Stark")

-- ERROR:
File "XXXX", line 5
    if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta ):
                                                                                                                                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:42:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=(input("nome:"))

if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta ):
	print("Entrada:",brasao)
	print("Casa:"invalido")
elif (brasao == lobo):
	print("Entrada:",brasao)
	print("Casa:","Stark")

-- ERROR:
File "XXXX", line 5
    if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta ):
                                                                                                                                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:43:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=(input("nome:"))

if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta)):
	print("Entrada:",brasao)
	print("Casa:"invalido")
elif (brasao == lobo):
	print("Entrada:",brasao)
	print("Casa:","Stark")

-- ERROR:
File "XXXX", line 7
    print("Casa:"invalido")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:43:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=(input("nome:"))

if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta)):
	print("Entrada:",brasao)
	print("Casa:invalido)
elif (brasao == lobo):
	print("Entrada:",brasao)
	print("Casa:","Stark")

-- ERROR:
File "XXXX", line 7
    print("Casa:invalido)
                        ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:43:44) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=(input("nome:"))

if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta)):
	print("Entrada:",brasao)
	print("Casa:invalido")
elif (brasao == lobo):
	print("Entrada:",brasao)
	print("Casa:","Stark")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta)):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:43:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=(input("nome:"))

if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta)):
	print("Entrada:",brasao)
	print("Casa:invalido")
elif (brasao == lobo):
	print("Entrada:",brasao)
	print("Casa:","Stark")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta)):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:44:05) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao=input("nome:")

if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta)):
	print("Entrada:",brasao)
	print("Casa:invalido")
elif (brasao == lobo):
	print("Entrada:",brasao)
	print("Casa:","Stark")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta)):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:45:25) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saídax
x=input("nome:")

if ((x != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta)):
	print("Entrada:",x)
	print("Casa:invalido")
elif (brasao == lobo):
	print("Entrada:",x)
	print("Casa:","Stark")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if ((x != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta)):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:47:31) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saídax
brasao=input("nome:")

if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta)):
	print("Entrada:",x)
	print("Casa:invalido")
elif (brasao == lobo):
	print("Entrada:",x)
	print("Casa:","Stark")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta)):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:48:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saídax
brasao=input("nome:")

if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta)):
	print("Entrada:",x)
	print("Casa:invalido")
elif (brasao == lobo):
	print("Entrada:",x)
	print("Casa:","Stark")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta)):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:48:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saídax
brasao=input("nome:")

if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta)):
	print("Entrada:",x)
	print("Casa:invalido")
elif (brasao == lobo):
	print("Entrada:",x)
	print("Casa:","Stark")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta)):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:48:51) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saídax
brasao=input("nome:")

if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta)):
	print("Entrada:",brasao)
	print("Casa:invalido")
elif (brasao == lobo):
	print("Entrada:",x)
	print("Casa:","Stark")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta)):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:49:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saídax
brasao=input("nome:")

if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta)):
	print("Entrada:",brasao)
	print("Casa:invalido")
elif (brasao == lobo):
	print("Entrada:",x)
	print("Casa:","Stark")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if ((brasao != lobo) and (brasao != leao) and (brasao != veado) and (brasao != dragao) and (brasao != rosa) and (brasao != sol) and (brasao != esfolado) and (brasao != turta)):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:09:02) 
-- CODE:
house = input("nome da casa: ")

if (( house != lobo ) and ( house != leao) and ( house != veado ) and ( house != dragao ) and ( house != rosa ) and ( house != sol ) and ( house != lula ) and ( house != esfolado ) and ( house != turta )):
	print("Entrada:",house)
	print("Brasao invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (( house != lobo ) and ( house != leao) and ( house != veado ) and ( house != dragao ) and ( house != rosa ) and ( house != sol ) and ( house != lula ) and ( house != esfolado ) and ( house != turta )):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:11:35) 
-- CODE:
house = input("nome da casa: ")

if (( house != lobo ) and ( house != leao) and ( house != veado ) and ( house != dragao ) and ( house != rosa ) and ( house != sol ) and ( house != lula ) and ( house != esfolado ) and ( house != turta )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == lobo ):
	print("Entrada:",house)
	print("Casa:":"")
-- ERROR:
File "XXXX", line 8
    print("Casa:":"")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:11:50) 
-- CODE:
house = input("nome da casa: ")

if (( house != lobo ) and ( house != leao) and ( house != veado ) and ( house != dragao ) and ( house != rosa ) and ( house != sol ) and ( house != lula ) and ( house != esfolado ) and ( house != turta )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == lobo ):
	print("Entrada:",house)
	print("Casa:":"Stark")
-- ERROR:
File "XXXX", line 8
    print("Casa:":"Stark")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:11:59) 
-- CODE:
house = input("nome da casa: ")

if (( house != lobo ) and ( house != leao) and ( house != veado ) and ( house != dragao ) and ( house != rosa ) and ( house != sol ) and ( house != lula ) and ( house != esfolado ) and ( house != turta )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == lobo ):
	print("Entrada:",house)
	print("Casa:","Stark")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (( house != lobo ) and ( house != leao) and ( house != veado ) and ( house != dragao ) and ( house != rosa ) and ( house != sol ) and ( house != lula ) and ( house != esfolado ) and ( house != turta )):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:13:31) 
-- CODE:
*from math import
house = input("nome da casa: ")

if (( house != lobo ) and ( house != leao) and ( house != veado ) and ( house != dragao ) and ( house != rosa ) and ( house != sol ) and ( house != lula ) and ( house != esfolado ) and ( house != turta )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == lobo ):
	print("Entrada:",house)
	print("Casa:","Stark")
-- ERROR:
File "XXXX", line 1
    *from math import
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:13:51) 
-- CODE:

house = input("nome da casa: ")

if (( house != lobo ) and ( house != leao) and ( house != veado ) and ( house != dragao ) and ( house != rosa ) and ( house != sol ) and ( house != lula ) and ( house != esfolado ) and ( house != turta )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == lobo ):
	print("Entrada:",house)
	print("Casa:","Stark")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (( house != lobo ) and ( house != leao) and ( house != veado ) and ( house != dragao ) and ( house != rosa ) and ( house != sol ) and ( house != lula ) and ( house != esfolado ) and ( house != turta )):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:24:30) 
-- CODE:

house = input("nome da casa: ")

if (( house != lobo ) and ( house != leao) and ( house != veado ) and ( house != dragao ) and ( house != rosa ) and ( house != sol ) and ( house != lula ) and ( house != esfolado ) and ( house != turta )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == lobo ):
	print("Entrada:",house)
	print("Casa:","Stark")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (( house != lobo ) and ( house != leao) and ( house != veado ) and ( house != dragao ) and ( house != rosa ) and ( house != sol ) and ( house != lula ) and ( house != esfolado ) and ( house != turta )):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:24:30) 
-- CODE:

house = input("nome da casa: ")

if (( house != lobo ) and ( house != leao) and ( house != veado ) and ( house != dragao ) and ( house != rosa ) and ( house != sol ) and ( house != lula ) and ( house != esfolado ) and ( house != turta )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == lobo ):
	print("Entrada:",house)
	print("Casa:","Stark")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (( house != lobo ) and ( house != leao) and ( house != veado ) and ( house != dragao ) and ( house != rosa ) and ( house != sol ) and ( house != lula ) and ( house != esfolado ) and ( house != turta )):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:24:30) 
-- CODE:

house = input("nome da casa: ")

if (( house != lobo ) and ( house != leao) and ( house != veado ) and ( house != dragao ) and ( house != rosa ) and ( house != sol ) and ( house != lula ) and ( house != esfolado ) and ( house != turta )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == lobo ):
	print("Entrada:",house)
	print("Casa:","Stark")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (( house != lobo ) and ( house != leao) and ( house != veado ) and ( house != dragao ) and ( house != rosa ) and ( house != sol ) and ( house != lula ) and ( house != esfolado ) and ( house != turta )):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:24:32) 
-- CODE:

house = input("nome da casa: ")

if (( house != lobo ) and ( house != leao) and ( house != veado ) and ( house != dragao ) and ( house != rosa ) and ( house != sol ) and ( house != lula ) and ( house != esfolado ) and ( house != turta )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == lobo ):
	print("Entrada:",house)
	print("Casa:","Stark")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (( house != lobo ) and ( house != leao) and ( house != veado ) and ( house != dragao ) and ( house != rosa ) and ( house != sol ) and ( house != lula ) and ( house != esfolado ) and ( house != turta )):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:28:58) 
-- CODE:

house = input("nome da casa: ")

if (( house != lobo ) and ( house != leao) and ( house != veado ) and ( house != dragao ) and ( house != rosa ) and ( house != sol ) and ( house != lula ) and ( house != esfolado ) and ( house != turta )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == lobo ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == leao ):
	print("Entrada:",house)
	print("Casa:","")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (( house != lobo ) and ( house != leao) and ( house != veado ) and ( house != dragao ) and ( house != rosa ) and ( house != sol ) and ( house != lula ) and ( house != esfolado ) and ( house != turta )):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:32:42) 
-- CODE:

house = input("nome da casa: ")

if (( house != lobo ) and ( house != leao) and ( house != veado ) and ( house != dragao ) and ( house != rosa ) and ( house != sol ) and ( house != lula ) and ( house != esfolado ) and ( house != turta )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == lobo ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == leao ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == veado ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == dragao ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == rosa ):
	print("Entrada:",house)
	print("Casa:","Martell")
elif ( house == lula ):
	print("Entrada:",house)
	print("Casa:","greyjoy")
elif ( house == esfolado ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == turta ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (( house != lobo ) and ( house != leao) and ( house != veado ) and ( house != dragao ) and ( house != rosa ) and ( house != sol ) and ( house != lula ) and ( house != esfolado ) and ( house != turta )):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:34:22) 
-- CODE:

house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == lobo ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == leao ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == veado ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == dragao ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == rosa ):
	print("Entrada:",house)
	print("Casa:","Martell")
elif ( house == lula ):
	print("Entrada:",house)
	print("Casa:","greyjoy")
elif ( house == esfolado ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == turta ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    elif ( house == lobo ):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:34:58) 
-- CODE:

house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == "lobo" ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == leao ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == veado ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == dragao ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == rosa ):
	print("Entrada:",house)
	print("Casa:","Martell")
elif ( house == lula ):
	print("Entrada:",house)
	print("Casa:","greyjoy")
elif ( house == esfolado ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == turta ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    elif ( house == leao ):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:35:01) 
-- CODE:

house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == "lobo" ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == leao ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == veado ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == dragao ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == rosa ):
	print("Entrada:",house)
	print("Casa:","Martell")
elif ( house == lula ):
	print("Entrada:",house)
	print("Casa:","greyjoy")
elif ( house == esfolado ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == turta ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    elif ( house == leao ):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:36:04) 
-- CODE:

house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == "lobo" ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == "leao" ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == "veado" ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == "dragao" ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == "rosa" ):
	print("Entrada:",house)
	print("Casa:","Martell")
elif ( house == "lula" ):
	print("Entrada:",house)
	print("Casa:","greyjoy")
elif ( house == "esfolado" ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == "turta" ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- OUTPUT:
Entrada: lula
Casa: greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 13:36:09) 
-- CODE:

house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == "lobo" ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == "leao" ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == "veado" ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == "dragao" ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == "rosa" ):
	print("Entrada:",house)
	print("Casa:","Martell")
elif ( house == "lula" ):
	print("Entrada:",house)
	print("Casa:","greyjoy")
elif ( house == "esfolado" ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == "turta" ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- EXECUTION TIME:
0.194786
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:36:17) 
-- CODE:

house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == "lobo" ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == "leao" ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == "veado" ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == "dragao" ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == "rosa" ):
	print("Entrada:",house)
	print("Casa:","Martell")
elif ( house == "lula" ):
	print("Entrada:",house)
	print("Casa:","greyjoy")
elif ( house == "esfolado" ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == "turta" ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- OUTPUT:
Entrada: lula
Casa: greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:36:28) 
-- CODE:

house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == "lobo" ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == "leao" ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == "veado" ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == "dragao" ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == "rosa" ):
	print("Entrada:",house)
	print("Casa:","Martell")
elif ( house == "lula" ):
	print("Entrada:",house)
	print("Casa:","greyjoy")
elif ( house == "esfolado" ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == "turta" ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- OUTPUT:
Entrada: lula
Casa: greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:38:14) 
-- CODE:

house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == "lobo" ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == "leao" ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == "veado" ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == "dragao" ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == "rosa" ):
	print("Entrada:",house)
	print("Casa:","Tyrell")
elif ( house == "sol" ):
	print("Entrada:",house)
	print("Casa:","Martell")	
elif ( house == "lula" ):
	print("Entrada:",house)
	print("Casa:","greyjoy")
elif ( house == "esfolado" ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == "turta" ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- OUTPUT:
Entrada: lula
Casa: greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 13:38:24) 
-- CODE:

house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == "lobo" ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == "leao" ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == "veado" ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == "dragao" ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == "rosa" ):
	print("Entrada:",house)
	print("Casa:","Tyrell")
elif ( house == "sol" ):
	print("Entrada:",house)
	print("Casa:","Martell")	
elif ( house == "lula" ):
	print("Entrada:",house)
	print("Casa:","greyjoy")
elif ( house == "esfolado" ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == "turta" ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- EXECUTION TIME:
0.156899
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:38:29) 
-- CODE:

house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == "lobo" ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == "leao" ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == "veado" ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == "dragao" ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == "rosa" ):
	print("Entrada:",house)
	print("Casa:","Tyrell")
elif ( house == "sol" ):
	print("Entrada:",house)
	print("Casa:","Martell")	
elif ( house == "lula" ):
	print("Entrada:",house)
	print("Casa:","greyjoy")
elif ( house == "esfolado" ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == "turta" ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- OUTPUT:
Entrada: lula
Casa: greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:39:31) 
-- CODE:

house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == "lobo" ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == "leao" ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == "veado" ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == "dragao" ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == "rosa" ):
	print("Entrada:",house)
	print("Casa:","Tyrell")
elif ( house == "sol" ):
	print("Entrada:",house)
	print("Casa:","Martell")	
elif ( house == "lula" ):
	print("Entrada:",house)
	print("Casa:","greyjoy")
elif ( house == "esfolado" ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == "turta" ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- OUTPUT:
Entrada: lula
Casa: greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:39:49) 
-- CODE:

house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == "lobo" ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == "leao" ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == "veado" ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == "dragao" ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == "rosa" ):
	print("Entrada:",house)
	print("Casa:","Tyrell")
elif ( house == "sol" ):
	print("Entrada:",house)
	print("Casa:","Martell")	
elif ( house == "lula" ):
	print("Entrada:",house)
	print("Casa:","greyjoy")
elif ( house == "esfolado" ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == "turta" ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- OUTPUT:
Entrada: lula
Casa: greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:39:55) 
-- CODE:

house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == "lobo" ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == "leao" ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == "veado" ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == "dragao" ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == "rosa" ):
	print("Entrada:",house)
	print("Casa:","Tyrell")
elif ( house == "sol" ):
	print("Entrada:",house)
	print("Casa:","Martell")	
elif ( house == "lula" ):
	print("Entrada:",house)
	print("Casa:","greyjoy")
elif ( house == "esfolado" ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == "turta" ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- OUTPUT:
Entrada: lula
Casa: greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:40:06) 
-- CODE:

house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == "lobo" ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == "leao" ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == "veado" ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == "dragao" ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == "rosa" ):
	print("Entrada:",house)
	print("Casa:","Tyrell")
elif ( house == "sol" ):
	print("Entrada:",house)
	print("Casa:","Martell")	
elif ( house == "lula" ):
	print("Entrada:",house)
	print("Casa:","greyjoy")
elif ( house == "esfolado" ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == "turta" ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- OUTPUT:
Entrada: lula
Casa: greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:40:16) 
-- CODE:

house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == "lobo" ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == "leao" ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == "veado" ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == "dragao" ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == "rosa" ):
	print("Entrada:",house)
	print("Casa:","Tyrell")
elif ( house == "sol" ):
	print("Entrada:",house)
	print("Casa:","Martell")	
elif ( house == "lula" ):
	print("Entrada:",house)
	print("Casa:","greyjoy")
elif ( house == "esfolado" ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == "turta" ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- OUTPUT:
Entrada: lula
Casa: greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:40:26) 
-- CODE:

house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == "lobo" ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == "leao" ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == "veado" ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == "dragao" ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == "rosa" ):
	print("Entrada:",house)
	print("Casa:","Tyrell")
elif ( house == "sol" ):
	print("Entrada:",house)
	print("Casa:","Martell")	
elif ( house == "lula" ):
	print("Entrada:",house)
	print("Casa:","greyjoy")
elif ( house == "esfolado" ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == "turta" ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- OUTPUT:
Entrada: lula
Casa: greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:40:40) 
-- CODE:

house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == "lobo" ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == "leao" ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == "veado" ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == "dragao" ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == "rosa" ):
	print("Entrada:",house)
	print("Casa:","Tyrell")
elif ( house == "sol" ):
	print("Entrada:",house)
	print("Casa:","Martell")	
elif ( house == "lula" ):
	print("Entrada:",house)
	print("Casa:","greyjoy")
elif ( house == "esfolado" ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == "turta" ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- OUTPUT:
Entrada: lula
Casa: greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:40:48) 
-- CODE:

house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == "lobo" ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == "leao" ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == "veado" ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == "dragao" ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == "rosa" ):
	print("Entrada:",house)
	print("Casa:","Tyrell")
elif ( house == "sol" ):
	print("Entrada:",house)
	print("Casa:","Martell")	
elif ( house == "lula" ):
	print("Entrada:",house)
	print("Casa:","greyjoy")
elif ( house == "esfolado" ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == "turta" ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- OUTPUT:
Entrada: lula
Casa: greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:41:01) 
-- CODE:

house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == "lobo" ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == "leao" ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == "veado" ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == "dragao" ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == "rosa" ):
	print("Entrada:",house)
	print("Casa:","Tyrell")
elif ( house == "sol" ):
	print("Entrada:",house)
	print("Casa:","Martell")	
elif ( house == "lula" ):
	print("Entrada:",house)
	print("Casa:","greyjoy")
elif ( house == "esfolado" ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == "turta" ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- OUTPUT:
Entrada: lula
Casa: greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:41:35) 
-- CODE:

house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == "lobo" ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == "leao" ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == "veado" ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == "dragao" ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == "rosa" ):
	print("Entrada:",house)
	print("Casa:","Tyrell")
elif ( house == "sol" ):
	print("Entrada:",house)
	print("Casa:","Martell")	
elif ( house == "lula" ):
	print("Entrada:",house)
	print("Casa:","Greyjoy")
elif ( house == "esfolado" ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == "turta" ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:41:43) 
-- CODE:

house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == "lobo" ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == "leao" ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == "veado" ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == "dragao" ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == "rosa" ):
	print("Entrada:",house)
	print("Casa:","Tyrell")
elif ( house == "sol" ):
	print("Entrada:",house)
	print("Casa:","Martell")	
elif ( house == "lula" ):
	print("Entrada:",house)
	print("Casa:","Greyjoy")
elif ( house == "esfolado" ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == "turta" ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 13:41:49) 
-- CODE:

house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == "lobo" ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == "leao" ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == "veado" ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == "dragao" ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == "rosa" ):
	print("Entrada:",house)
	print("Casa:","Tyrell")
elif ( house == "sol" ):
	print("Entrada:",house)
	print("Casa:","Martell")	
elif ( house == "lula" ):
	print("Entrada:",house)
	print("Casa:","Greyjoy")
elif ( house == "esfolado" ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == "turta" ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- EXECUTION TIME:
0.11492
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 00:02:59) 
-- CODE:
house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == "lobo" ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == "leao" ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == "veado" ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == "dragao" ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == "rosa" ):
	print("Entrada:",house)
	print("Casa:","Tyrell")
elif ( house == "sol" ):
	print("Entrada:",house)
	print("Casa:","Martell")	
elif ( house == "lula" ):
	print("Entrada:",house)
	print("Casa:","Greyjoy")
elif ( house == "esfolado" ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == "turta" ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 00:03:16) 
-- CODE:
house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == "lobo" ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == "leao" ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == "veado" ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == "dragao" ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == "rosa" ):
	print("Entrada:",house)
	print("Casa:","Tyrell")
elif ( house == "sol" ):
	print("Entrada:",house)
	print("Casa:","Martell")	
elif ( house == "lula" ):
	print("Entrada:",house)
	print("Casa:","Greyjoy")
elif ( house == "esfolado" ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == "turta" ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 00:03:23) 
-- CODE:
house = input("nome da casa: ")

if (( house != "lobo") and ( house != "leao") and ( house != "veado" ) and ( house != "dragao" ) and ( house != "rosa" ) and ( house != "sol" ) and ( house != "lula" ) and ( house != "esfolado" ) and ( house != "turta" )):
	print("Entrada:",house)
	print("Brasao invalido")
elif ( house == "lobo" ):
	print("Entrada:",house)
	print("Casa:","Stark")
elif ( house == "leao" ):
	print("Entrada:",house)
	print("Casa:","Lannister")
elif ( house == "veado" ):
	print("Entrada:",house)
	print("Casa:","Baratheon")
elif ( house == "dragao" ):
	print("Entrada:",house)
	print("Casa:","Targaryen")
elif ( house == "rosa" ):
	print("Entrada:",house)
	print("Casa:","Tyrell")
elif ( house == "sol" ):
	print("Entrada:",house)
	print("Casa:","Martell")	
elif ( house == "lula" ):
	print("Entrada:",house)
	print("Casa:","Greyjoy")
elif ( house == "esfolado" ):
	print("Entrada:",house)
	print("Casa:","Bolton")
elif ( house == "turta" ):
	print("Entrada:",house)
	print("Casa:","Tully")
-- EXECUTION TIME:
0.222819
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
